# vote-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.code_quality/: .coveragerc  .pylintrc  setup.cfg
.github/workflows/: django.yml
backend/: manage.py  pyproject.toml  settings.py
backend/app/: asgi.py  settings.py  wsgi.py
backend/backend/: settings.py
backend/commands/: run.sh  test.sh
backend/polls/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/polls/migrations/: 0001_initial.py  0002_question_published.py
backend/polls/templates/polls/: base.html  detail.html  index.html  results.html
backend/templates/: base.html  footer.html
backend/templates/polls/: detail.html  index.html  results.html
backend/users/: serializers.py  views.py
backend/voteapp/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.js  index.js
frontend/src/mocks/: questions.js
